[metadata]
name = antlr-ast
author = Michael Chow
author_email = michael@datacamp.com
maintainer = Jeroen Hermans
maintainer_email = content-engineering@datacamp.com
description = AST shaping for antlr parsers
url = https://github.com/datacamp/antlr-ast
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
packages = antlr_ast
install_requires = antlr4-python3-runtime
